--- a/django_admin_json_editor/templates/django_admin_json_editor/editor.html
+++ b/django_admin_json_editor/templates/django_admin_json_editor/editor.html
@@ -16,7 +16,7 @@
     });
     {% if data %}
         var json = "{{ data|safe }}";
-        {{ name }}_editor.setValue(JSON.parse(json));
+        {{ name }}_editor.setValue(JSON.parse(json.replace(/'/g, '"')));
     {% endif %}
 </script>
 
