converted True to true and False to false in json string

--- a/django_admin_json_editor/templates/django_admin_json_editor/editor.html
+++ b/django_admin_json_editor/templates/django_admin_json_editor/editor.html
@@ -16,7 +16,7 @@
     });
     {% if data %}
         var json = "{{ data|safe }}";
-        {{ name }}_editor.setValue(JSON.parse(json.replace(/'/g, '"')));
+        {{ name }}_editor.setValue(JSON.parse(json.replace(/'/g, '"').replaceAll("True", "true").replaceAll("False", "false")));
     {% endif %}
 </script>
 
