--- a/django_admin_json_editor/templates/django_admin_json_editor/editor.html
+++ b/django_admin_json_editor/templates/django_admin_json_editor/editor.html
@@ -15,8 +15,8 @@
         }
     });
     {% if data %}
-        var json = "{{ data|safe }}";
-        {{ name }}_editor.setValue(JSON.parse(json.replace(/'/g, '"').replaceAll("True", "true").replaceAll("False", "false")));
+        var json = {{ data|safe }};
+        {{ name }}_editor.setValue(json);
     {% endif %}
 </script>
 
